modify admin entity