@@ -1,8 +1,8 @@
 package com.salecampaign.salescampaign.jwt;
 
-import com.salecampaign.salescampaign.entity.Role;
-import com.salecampaign.salescampaign.entity.Seller;
-import com.salecampaign.salescampaign.repositories.SellerRepo;
+import com.salecampaign.salescampaign.entity.enums.Role;
+import com.salecampaign.salescampaign.entity.Admin;
+import com.salecampaign.salescampaign.repositories.AdminRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -14,24 +14,28 @@ import java.util.List;
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
     @Autowired
-    SellerRepo sellerRepo;
+    AdminRepo adminRepo;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        try{
-            List<Object[]> objects = sellerRepo.findByUsername(username);
-            if(!objects.isEmpty()){
-                Seller seller = new Seller();
-                seller.setSellerId((int) objects.get(0)[0]);
-                seller.setUsername((String) objects.get(0)[1]);
-                seller.setPassword((String) objects.get(0)[2]);
-                seller.setRole(Role.USER);
-                return new UserDetailsImpl(seller);
-            }else{
-                throw new UsernameNotFoundException(username+" not found.");
+        try {
+            List<Object[]> objects = adminRepo.findByUsername(username);
+            if (!objects.isEmpty()) {
+                Admin admin = new Admin();
+                admin.setAdminId((int) objects.getFirst()[0]);
+                admin.setUsername((String) objects.getFirst()[1]);
+                admin.setPassword((String) objects.getFirst()[2]);
+                if (objects.getFirst()[3] == "0") {
+                    admin.setRole(Role.USER);
+                } else if (objects.getFirst()[3] == "1") {
+                    admin.setRole(Role.ADMIN);
+                }
+                return new UserDetailsImpl(admin);
+            } else {
+                throw new UsernameNotFoundException(username + " not found.");
             }
-        }catch (Exception e){
-            throw new UsernameNotFoundException(username+" not found.");
+        } catch (Exception e) {
+            throw new UsernameNotFoundException(username + " not found.");
         }
     }
 }
